# maya-public

./: .env.example  .envrc.example  .gitignore  AGENTS.md  Makefile  README.md  flake.nix  pyproject.toml
.github/workflows/: test.yml
apps/discord-shim/: README.md
apps/maya-bot/: README.md  pyproject.toml
apps/maya-bot/src/maya_bot/: main.py
apps/maya-bot/src/maya_bot/cogs/: chat.py  imagine.py  music.py
apps/maya-bot/src/maya_bot/music/: audio_source.py  intent.py  listener.py  mpv_session.py  resolver.py  wikidata.py
apps/maya-bot/tests/: test_chat_cog.py  test_music_intent.py  test_music_mpv_session.py  test_music_resolver.py  test_music_wikidata.py
apps/maya-gateway/: Dockerfile  README.md  pyproject.toml
apps/maya-gateway/src/maya_gateway/: main.py
apps/maya-gateway/src/maya_gateway/auth/: __init__.py  config.py  deps.py  discord.py  discord_roles.py  email.py  google.py  invites.py  oauth_state.py  passwords.py  service.py  session.py  validation_errors.py
apps/maya-gateway/src/maya_gateway/routes/: arena.py  auth.py  discover.py  follow.py  guide.py  notifications.py  research.py
apps/maya-gateway/src/maya_gateway/services/: docs_render.py  follow.py  follow_enrich.py  music_projector.py
apps/maya-gateway/src/maya_gateway/static/: index.html
apps/maya-gateway/src/maya_gateway/static/assets/: Code-BnIk0oCP.js  Code-D6yJs05S.js  Terminal-B00fx_Aw.js  Terminal-CvjxKmR0.js  Vnc-BHhcQJ6t.js  Vnc-D1sJgbAT.js  index-BJ6s3Yzp.css  index-C437kwAf.css  index-PPx1In8X.js  index-hvyeYynD.js  store-CBrPpXuA.js  store-CZF3RX6H.js
apps/maya-gateway/src/maya_gateway/static/gateway/audio/: audio-monitor.js  dictation-sdk.css  dictation-sdk.js  mic-test.html  resample-worklet.js
apps/maya-gateway/src/maya_gateway/static/gateway/auth/: auth-gate.js  auth-greeting.js  auth-session.js
apps/maya-gateway/src/maya_gateway/static/sdk/: kitchen-sink.html  maya-voice-sdk.css  maya-voice-sdk.js
apps/maya-gateway/src/maya_gateway/static/sdk/guide/: guide.css  guide.js
apps/maya-gateway/src/maya_gateway/static/static/gateway/audio/: eq-panel.css  eq-panel.js
apps/maya-gateway/src/maya_gateway/static/static/gateway/auth/: auth-bridge.js  auth-lock.js  auth-shell.css  auth-waybar-chip.js
apps/maya-gateway/src/maya_gateway/templates/: guide.html
apps/maya-gateway/tests/: test_audio_routes.py  test_auth_core.py  test_auth_discord_register.py  test_auth_email.py  test_auth_register.py  test_auth_resolver.py  test_auth_session_actions.py  test_auth_session_routes.py  test_auth_validation.py  test_follow_enrich.py  test_guide_docs.py  test_imagine_routes.py
docs/: docs.json  forge-uat-results.md  index.md  kitchen-sink.md  maya-audio-domain-summary.md  preferences.md  public-boundary.md  voice-agent-feature-map.md
infra/: docker-compose.dev.yml
scripts/: bootstrap_ukf_follow.py  run_benchmark.py  run_video_asr_arena.py  seed_auth_users.py
(+25 files in other folders)
