[project]
name = "maya-public"
version = "0.1.0"
description = "Public-facing Maya services — arena, feed, image generation contracts"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = ["pyright>=1.1", "pytest>=8.0", "pytest-asyncio>=0.23", "pytest-anyio>=0.0"]

[tool.uv.workspace]
members = ["packages/*", "apps/*"]
exclude = ["apps/homepage"]

[tool.uv.sources]
maya-contracts = { workspace = true }
arena-core = { workspace = true }
fal-client = { workspace = true }
obs-client = { workspace = true }
maya-db = { workspace = true }
maya-feeds = { workspace = true }
maya-graph = { workspace = true }
maya-research = { workspace = true }
maya-image = { workspace = true }
maya-llm = { workspace = true }
maya-audio = { workspace = true }
maya-voice = { workspace = true }
maya-voice-stack = { workspace = true }
