[project]
name = "maya-gateway"
version = "0.1.0"
description = "FastAPI gateway — thin routes: parse → validate → call service → return"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "maya-contracts",
    "arena-core",
    "maya-db",
    "obs-client",
]

[tool.uv.sources]
maya-contracts = { workspace = true }
arena-core = { workspace = true }
maya-db = { workspace = true }
obs-client = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/maya_gateway"]

[project.scripts]
maya-gateway = "maya_gateway.main:run"
